Closed Bug 268034 Opened 21 years ago Closed 19 years ago

Mail imported from Mozilla 1.x dumps messages in wrong mailboxes, when multiple accounts on same mail server

Categories

(Thunderbird :: Migration, defect)

x86
Windows XP
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0a3

People

(Reporter: spamcontrol2, Assigned: standard8)

References

Details

(Keywords: fixed1.8.1.5, Whiteboard: [fixed in TBv30a1])

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.5) Gecko/20041103 Firefox/1.0RC2 Build Identifier: When importing mail from my Netscape 7.2/Moz1.7 profile into Thunderbird 0.9, mail gets dumped into the wrong folder. Everything seems to migrate properly, including the account setups, etc, except the messages themselves. I have 6 accounts. Messages for the first account import fine, but all messages in all folders for all other accounts end up in the "Inbox" folder of the second account. Could this be related to bug #265072? Reproducible: Always Steps to Reproduce: Not sure how to make this happen for someone else - I can start looking through the structures of my files if someone can direct me.
Actually, I take that back. It appears that the first account's messages import fine. The *third* account's messages are imported into corresponding folders in the second account. No messages show up in the third through sixth accounts.
(In reply to comment #0) > but all messages in all folders for all other accounts end up in the "Inbox" folder of the second account. Is mail server of "all other accounts" same mail server? In Japanese forum, a few weeks ago, a Japanese user reported same situation when some accounts are on same POP3 server.
(In reply to comment #2) > Is mail server of "all other accounts" same mail server? No, though as I said this wasn't a 100% correct symptom. It might be related though. As I said, all the mail from account #3 ends up in account #2, Account #1 is fine, and nothing ends up in accounts 3-6. Account #2 and #3 are on the same mail server. Accounts 1 and 4-6 are on a different mail server. Could this be important?
(In reply to comment #3) > all the mail from account #3 ends up in account #2, > Account #2 and #3 are on the same mail server. Oh, it's very important. This is the problem I said in my comment #2. In my case, same path was set in "Local Directry" setting of account #2 account #3 after migration, if same POP3 server(different username). This was the cause of "all the mail from account #3 ends up in account #2". Ian Schorr, please check "Local Directry" setting of account #2 and account #3. Check also "Global Inbox" setting(Server Settings/Advanced button/POP) of account #2 and 3. > Account #1 is fine, and nothing ends up in accounts 3-6. > Accounts 1 and 4-6 are on a different mail server. Account #1 seems to has no problem. Your problem on account #4-6 was not reported to forum in Japan. Check both "Local Follder" settings and "Global Inbox" setting(Server Settings/Advanced button/POP) of account #4-6.
we migrate the folders to a new directory \Mail\hostname since the hostnames are the same we must be stomping on the directories. Hopefully this can easily be fixed by making sure the directory we are copying the folders into is unique.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → Thunderbird1.0
Attached patch the fixSplinter Review
Attachment #165197 - Flags: superreview?(bienvenu)
Attachment #165197 - Flags: superreview+
Attachment #165197 - Flags: superreview?(bienvenu)
fixed branch and trunk
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
*** Bug 259460 has been marked as a duplicate of this bug. ***
*** Bug 269533 has been marked as a duplicate of this bug. ***
*** Bug 260966 has been marked as a duplicate of this bug. ***
*** Bug 270182 has been marked as a duplicate of this bug. ***
This patch does appear to have partially fixed my problem, but not completely. I'm not sure why it didn't fix the entire problem. As I described, originally my problem was this: Mailbox Domain Ends up in Mailbox: Mailbox #1: Domain 1: -> Mailbox #1 Mailbox #2: Domain 2: -> Mailbox #2 Mailbox #3: Domain 2: -> Mailbox #2 Mailbox #4: Domain 1: -> Unknown Mailbox #5: Domain 1: -> Unknown Mailbox #6: Domain 1: -> Unknown Currently the behavior is this: Mailbox #1: Domain 1: -> Mailbox #1 Mailbox #2: Domain 2: -> Mailbox #2 Mailbox #3: Domain 2: -> Mailbox #2 <-- Wrong Mailbox #4: Domain 1: -> Mailbox #4 Mailbox #5: Domain 1: -> Mailbox #5 Mailbox #6: Domain 1: -> Mailbox #6
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
I take that back, I'm sorry. The new behavior is: Mailbox Domain Ends up in Mailbox: Mailbox #1: Domain 1: -> Mailbox #1 Mailbox #2: Domain 2: -> Mailbox #3 <-- Wrong Mailbox #3: Domain 2: -> Mailbox #2 <-- Wrong Mailbox #4: Domain 1: -> Mailbox #5 <-- Wrong Mailbox #5: Domain 1: -> Mailbox #6 <-- Wrong Mailbox #6: Domain 1: -> Mailbox #4 <-- Wrong
remaining issue is not a stopper we fixed the big problem most folks ran int.
Target Milestone: Thunderbird1.0 → Future
Re: Comment #14 "remaining issue is not a stopper we fixed the big problem most folks ran int." What makes you think that each of these users with duplicate reported bugs wouldn't also have the remaining portion of the issue?
*** Bug 272206 has been marked as a duplicate of this bug. ***
Change summary(add "multiple accounts on same mail server") for ease of search.
Summary: Mail imported from Mozilla 1.x dumps messages in wrong mailboxes → Mail imported from Mozilla 1.x dumps messages in wrong mailboxes, when multiple accounts on same mail server
Ok, I think this bug corresponds approx. to the one I just wanted to report. So I would like to give you some more information by telling you what I experience. I have a similar configuration to the one of the original reporter. I fact all the pop servers are different but as I use a mail antivirus (part of PCCillin2002) I change slightly the configuration of my mozilla account parameters so that the POP servers are (for all my accounts) 'localhost' and the userID is 'userid/pop.server' Now my mails are migrated with 1.0RC but I can't see them. Indeed in my profile folder, the messages have been imported to localhost localhost-1 localhost-2 etc... They are there. However the account parameters are different in the sense that for each account, other folders exist like pop.server pop.theother.server... Of course these folders are empty and don't contain the messages I would have like to have imported. Fabien
I can confirm that this bug affects RC1. As reported on MozillaZine : 3. Upon looking into the Profiles files in Library/Thunderbird, I found out 2 folders for my mail using the same name, but one with an extra "-1" (ie pop.maildomain-1.ca) added at the end of the folder name! This is clearly a folder naming bug, because all my mail was imported in a folder without the "-1" (ie pop.maildomain.ca). The fix I renamed these two folders making sure my real mail folder had the "-1" addition in its name. Now I have successfuly migrated to Thunderbird and all my messages are shown intact. Sadly, non-technical Mozilla users won't be able to migrate easily to Thunderbird.
migrating from Mozilla 1.7.x NO messages were imported !
I can confirm that the problem occurs with 1.0. Furthermore the subscribed newsgroups are not imported.
*** Bug 281281 has been marked as a duplicate of this bug. ***
*** Bug 270334 has been marked as a duplicate of this bug. ***
I have a similar problem with LINUX, under K.D.E. 3.2, migrating from Mozilla 1.7.7 to Thunderbird version 1.0.2 (20050317): my second e-mail account is imported, but its mails and user-defined directories are not, though the 3rd (local directories) account's mails and directories are correctly imported, as well as my Usenet account (ranked 4th and last) news. ==> Please CHANGE this bug OS setting and define a priority.
I think i have yet another behavior. I have 3 accounts, let's call them bulbul@school.edu, bulbul@work.com, and work@work.com. Account bulbul@school.edu imported fine. However, everything for account bulbul@work.com imported under account work@work.com and vice versa. Thunderbird 1.0.6, Linux.
This is also a problem for TB 1.0.7 (Linux) when migrating a Netscape 7.2 profile with multiple accounts (on SUSE 9.3). I have 10+ e-mail and newsgroup accounts in one NS 7.2 profile. Four of the accounts have the same server hostname in their e-mail addresses. Three of the four accounts had their e-mail folders copied into the wrong account's Mail directory in new TB profile. E-mail folders for the other accounts, at first glance, appear to have been migrated correctly. In addition, I also noticed that migration failed to copy the NS 7,2 SMTP server/authentication information for non-default SMTP servers. Only the default SMTP server information was copied.
*** Bug 298148 has been marked as a duplicate of this bug. ***
I experienced a similar problem with nightly build Thunderbird 1.6a1 (20060110): When importing multiple accounts from Mozilla 1.7.12, mail folders ended up in the wrong accounts. This seems to be related to conflicting values for absolute and relative directory names in prefs.js: user_pref("mail.server.server3.directory", "C:\\Dokumente und Einstellungen\\Vogt\\Anwendungsdaten\\Thunderbird\\Profiles\\qc5uf85g.default\\Mail\\www.com2-gmbh-2.de"); user_pref("mail.server.server3.directory-rel", "[ProfD]Mail/www.com2-gmbh-1.de"); For the same server (server3), the directory and directory-rel properties point to different directories: www.com2-gmbh.de and www.com2-gmbh-1.de, resp.
Typo in my previous comment. The last line should read: to different directories: www.com2-gmbh-2.de and www.com2-gmbh-1.de, resp.
(This is an update to comment #26) > This is also a problem for TB 1.0.7 (Linux) when migrating a Netscape 7.2 > profile with multiple accounts (on SUSE 9.3). I just downloaded TB 1.5.0.2 (20060420), removed my old ~/.thunderbird directory and tried to import from the same NS 7.2 profile. The problem still exists: messages were copied into the wrong TB mailboxes.
I am seeing the same problem. The problem I see is that the files imported properly, but the directory names for the 3rd and 5th directories in the thunderbird path are reversed from the original names in the mozilla path where the netscape accounts are stored. I have 5 pop accounts, 2 on a verizon server and 3 on a comcast server. My solution was to rename the 3rd directory to a temp name, rename the 5th directory name to the 3rd directory name, and then to rename the temp directory name to the 5th directory name. If I do that before downloading any mail, then everything is fine. Contact me if you need additional info.
(In reply to comment #29) > Typo in my previous comment. The last line should read: > to different directories: www.com2-gmbh-2.de and www.com2-gmbh-1.de, resp. > The problem occurred with Thunderbird 1.5.0.5 In the prefs.js file, I found mismatched absolute and relative paths like the following: user_pref("mail.server.server1.directory", "C:\\Dokumente und Einstellungen\\Vogt\\Anwendungsdaten\\Thunderbird\\Profiles\\bhssojtl.default\\Mail\\www.com2-gmbh-1.de"); user_pref("mail.server.server1.directory-rel", "[ProfD]Mail/www.com2-gmbh.de"); and similar discrepancies for server2 through server6. I have changed the "...directory-rel" entries to match the absolute ones, and this seems to solve the problem.
QA Contact: migration
I have just fixed this on SeaMonkey's new profile migrator (bug 381483). I have ported the patch and am currently rebuilding and testing the solution, therefore taking the bug.
Assignee: mscott → bugzilla
Status: REOPENED → NEW
This fixes the mail folder & newsgroups migration problems. Mail problem: Basically if you've got more than one account on the same server for mail set up, the .directory prefs can end up pointing to a different directory to the .directory-rel prefs (as per comment 32). As nsMsgIncomingServer.cpp will recreate the .directory-rel prefs if they don't exist, this patch just causes the migration to drop the .directory-rel prefs and just set up the .directory prefs correctly. News problem: Similar to the mail folders, but with the added complication of pre-pending the folder name with "host-". I couldn't see any reasons for this in blame, so I've dropped the pre-pending and removing the .directory-rel prefs will also help to fix the problem. This part also will fix bug 272312.
Comment on attachment 266277 [details] [diff] [review] Fix mail folder and newsgroup migration Scott, sorry forgot to request reviews. See my previous comment. If you want it for branch please can you deal with that bit as I don't tend to build/test branch Thunderbird.
Attachment #266277 - Flags: superreview?(mscott)
Attachment #266277 - Flags: review?(mscott)
Blocks: 272312
Comment on attachment 266277 [details] [diff] [review] Fix mail folder and newsgroup migration Thanks Mark! Bonus points if you can change the xpidlcstring to a nsCString before you check in :) I'll nominate for the branch for 2005 and will test & land it there if approved.
Attachment #266277 - Flags: superreview?(mscott)
Attachment #266277 - Flags: superreview+
Attachment #266277 - Flags: review?(mscott)
Attachment #266277 - Flags: review+
Attachment #266277 - Flags: approval1.8.1.5?
(In reply to comment #37) > (From update of attachment 266277 [details] [diff] [review]) > Thanks Mark! Bonus points if you can change the xpidlcstring to a nsCString > before you check in :) Done, checked into trunk.
Status: NEW → RESOLVED
Closed: 21 years ago19 years ago
Resolution: --- → FIXED
Comment on attachment 266277 [details] [diff] [review] Fix mail folder and newsgroup migration approved for 1.8.1.5, a=dveditz for release-drivers
Attachment #266277 - Flags: approval1.8.1.5? → approval1.8.1.5+
Keywords: fixed1.8.1.5
Blocks: 467015
Whiteboard: [fixed in TBv30a1]
Target Milestone: Future → Thunderbird 3.0a3
Version: unspecified → Trunk
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: