Bug #268034 --> Mail imported from Mozilla 1.x dumps messages in wrong mailboxes

when migrating mozilla profiles with multiple servers with the same host name, we should make
sure our hostname based diretory is unique.

sr=bienvenu